test/classes/errors/nilability-init-var/init-var-oknil-shared-from-oknil-unmanaged.good
init-var-oknil-shared-from-oknil-unmanaged.chpl:9: error: invalid copy-initialization
init-var-oknil-shared-from-oknil-unmanaged.chpl:9: error: cannot initialize 'shared MyClass?' from a 'unmanaged MyClass?'
